fix: remove all global asset paths

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="header__wrapper">
           <div class="header__logo">
             <a href="#!">
-              <img src="/images/header/odigo-Logo.svg" alt="odigo-logo" />
+              <img src="images/header/odigo-Logo.svg" alt="odigo-logo" />
             </a>
           </div>
           <nav class="header__nav">
@@ -84,7 +84,7 @@
             <div class="benefits__cells">
               <article class="benefits__cell">
                 <div class="cell__pic">
-                  <img src="/images/benefits/temple.svg" alt="japanese temple" class="cell__img" />
+                  <img src="images/benefits/temple.svg" alt="japanese temple" class="cell__img" />
                 </div>
                 <h4 class="cell__title">Welcome to Odigo!</h4>
                 <p class="cell__desc">
@@ -95,7 +95,7 @@
 
               <article class="benefits__cell">
                 <div class="cell__pic">
-                  <img src="/images/benefits/person.svg" alt="guide" class="cell__img" />
+                  <img src="images/benefits/person.svg" alt="guide" class="cell__img" />
                 </div>
                 <h4 class="cell__title">Your Personal Japan Guide</h4>
                 <p class="cell__desc">
@@ -106,7 +106,7 @@
 
               <article class="benefits__cell">
                 <div class="cell__pic">
-                  <img src="/images/benefits/market.svg" alt="japanese businesses" class="cell__img" />
+                  <img src="images/benefits/market.svg" alt="japanese businesses" class="cell__img" />
                 </div>
                 <h4 class="cell__title">Promoting Local Businesses</h4>
                 <p class="cell__desc">
@@ -128,31 +128,31 @@
           <div class="inspiring__places">
             <article class="inspiring__place inspiring__place-lg">
               <a href="#!" class="inspiring__link">
-                <img src="/images/inspiration/place-1-min.jpg" alt="Mount Fuji" class="places__img" />
+                <img src="images/inspiration/place-1-min.jpg" alt="Mount Fuji" class="places__img" />
                 <h4 class="place__name">Mount Fuji</h4>
               </a>
             </article>
             <article class="inspiring__place inspiring__place-lg">
               <a href="#!" class="inspiring__link">
-                <img src="/images/inspiration/place-2-min.jpg" alt="Kyoto" class="places__img" />
+                <img src="images/inspiration/place-2-min.jpg" alt="Kyoto" class="places__img" />
                 <h4 class="place__name">Kyoto</h4>
               </a>
             </article>
             <article class="inspiring__place inspiring__place-sm">
               <a href="#!" class="inspiring__link">
-                <img src="/images/inspiration/place-3-min.jpg" alt="Tokyo" class="places__img" />
+                <img src="images/inspiration/place-3-min.jpg" alt="Tokyo" class="places__img" />
                 <h4 class="place__name">Tokyo</h4>
               </a>
             </article>
             <article class="inspiring__place inspiring__place-sm">
               <a href="#!" class="inspiring__link">
-                <img src="/images/inspiration/place-4-min.jpg" alt="Niigata" class="places__img" />
+                <img src="images/inspiration/place-4-min.jpg" alt="Niigata" class="places__img" />
                 <h4 class="place__name">Niigata</h4>
               </a>
             </article>
             <article class="inspiring__place inspiring__place-sm">
               <a href="#!" class="inspiring__link">
-                <img src="/images/inspiration/place-5-min.jpg" alt="Sapporo" class="places__img" />
+                <img src="images/inspiration/place-5-min.jpg" alt="Sapporo" class="places__img" />
                 <h4 class="place__name">Sapporo</h4>
               </a>
             </article>
@@ -163,7 +163,7 @@
       <section class="temples">
         <div class="wrapper__max">
           <figure class="temple">
-            <img src="/images/temples/tottori-min.jpg" alt="Tottori japanese prefecture" class="temple__img" />
+            <img src="images/temples/tottori-min.jpg" alt="Tottori japanese prefecture" class="temple__img" />
             <figcaption class="temple__desc">
               <h3 class="temple__title">Prefecture in Focus: Tottori</h3>
               <p class="temple__subtitle">
@@ -185,7 +185,7 @@
               <a href="#!" class="more__link">viev neighborhood</a>
             </figcaption>
             <img
-              src="/images/temples/arashiyama-min.jpg"
+              src="images/temples/arashiyama-min.jpg"
               alt="Arashiyama featured neighborhood in Japan"
               class="temple__img sec__temple-img"
             />
@@ -199,7 +199,7 @@
           <div class="top__cards">
             <article class="top__card">
               <div class="top__pic">
-                <img src="/images/top/top-1-min.jpg" alt="Nagoya" class="card__img" />
+                <img src="images/top/top-1-min.jpg" alt="Nagoya" class="card__img" />
                 <div class="card__stats">
                   <h4 class="card__title">Nagoya</h4>
                   <div class="top__card-likes">
@@ -218,7 +218,7 @@
             </article>
             <article class="top__card">
               <div class="top__pic">
-                <img src="/images/top/top-2-min.jpg" alt="Niigata" class="card__img" />
+                <img src="images/top/top-2-min.jpg" alt="Niigata" class="card__img" />
                 <div class="card__stats">
                   <h4 class="card__title">Niigata</h4>
                   <div class="top__card-likes">
@@ -237,7 +237,7 @@
             </article>
             <article class="top__card">
               <div class="top__pic">
-                <img src="/images/top/top-3-min.jpg" alt="Osak" class="card__img" />
+                <img src="images/top/top-3-min.jpg" alt="Osak" class="card__img" />
                 <div class="card__stats">
                   <h4 class="card__title">Osaka</h4>
                   <div class="top__card-likes">
@@ -256,7 +256,7 @@
             </article>
             <article class="top__card">
               <div class="top__pic">
-                <img src="/images/top/top-4-min.jpg" alt="Saitama" class="card__img" />
+                <img src="images/top/top-4-min.jpg" alt="Saitama" class="card__img" />
                 <div class="card__stats">
                   <h4 class="card__title">Saitama</h4>
                   <div class="top__card-likes">
@@ -275,7 +275,7 @@
             </article>
             <article class="top__card">
               <div class="top__pic">
-                <img src="/images/top/top-5-min.jpg" alt="Ueno" class="card__img" />
+                <img src="images/top/top-5-min.jpg" alt="Ueno" class="card__img" />
                 <div class="card__stats">
                   <h4 class="card__title">Ueno</h4>
                   <div class="top__card-likes">
@@ -294,7 +294,7 @@
             </article>
             <article class="top__card">
               <div class="top__pic">
-                <img src="/images/top/top-6-min.jpg" alt="Shibuya" class="card__img" />
+                <img src="images/top/top-6-min.jpg" alt="Shibuya" class="card__img" />
                 <div class="card__stats">
                   <h4 class="card__title">Shibuya</h4>
                   <div class="top__card-likes">
@@ -334,7 +334,7 @@
         <div class="footer__content">
           <div class="footer__logo">
             <img
-              src="/images/footer/odigo-logo-footer.svg"
+              src="images/footer/odigo-logo-footer.svg"
               alt="Discover Amazing places in Japan"
               class="footer__logo-pic"
             />
